Removed redundant fonts for better performance

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     />
     <link rel="manifest" href="public/assets/site.webmanifest" />
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="public/SFProText/stylesheet.css" />
-    <link rel="stylesheet" href="public/SFRounded/stylesheet.css" />
+    <!-- <link rel="stylesheet" href="public/SFProText/stylesheet.css" />
+    <link rel="stylesheet" href="public/SFRounded/stylesheet.css" /> -->
     <link rel="stylesheet" href="public/SFProDisplay/stylesheet.css" />
   </head>
 
